src/test/ui/span/issue-39018.stderr
error[E0369]: binary operation `+` cannot be applied to type `&'static str`
  --> $DIR/issue-39018.rs:12:13
   |
12 |     let x = "Hello " + "World!";
   |             ^^^^^^^^
   |
note: `+` can't be used to concatenate two `&str` strings
  --> $DIR/issue-39018.rs:12:13
   |
12 |     let x = "Hello " + "World!";
   |             ^^^^^^^^
help: to_owned() can be used to create an owned `String` from a string reference. String concatenation appends the string on the right to the string on the left and may require reallocation. This requires ownership of the string on the left.
   |     let x = "Hello ".to_owned() + "World!";

error[E0369]: binary operation `+` cannot be applied to type `World`
  --> $DIR/issue-39018.rs:17:13
   |
17 |     let y = World::Hello + World::Goodbye;
   |             ^^^^^^^^^^^^
   |
note: an implementation of `std::ops::Add` might be missing for `World`
  --> $DIR/issue-39018.rs:17:13
   |
17 |     let y = World::Hello + World::Goodbye;
   |             ^^^^^^^^^^^^

error: aborting due to 2 previous errors

